--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
+# Virtual environment
+venv/
+.env/
+
+# Python cache
 __pycache__/
 *.pyc
-.env
-models/*.pkl
-data/*.csv
+
+# OS files
+Thumbs.db
+.DS_Store
